--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,17 @@
-* {
-  box-sizing: border-box;
+@charset "UTF-8";
+
+.header-right{
+  float: right;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+.container {
+  font-size: 100px;
 }
